# haskell-json-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  ghcid-lib.sh  ghcid-test.sh  ghcid.sh  json-parser-haskell.cabal  shell.nix
app/: Main.hs
nix/: cabal2nix_generated_derivation.nix  nixpkgs_pinned.json  nixpkgs_pinned.nix  release.nix
src/: JsonParser.hs  PrettyJsonDumper.hs
test/: JsonParserTest.hs  Main.hs
