cabal-version:      3.0
name:               json-parser-haskell
version:            0.1.0.0
synopsis:           Simple json parser in Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ankur Sharma
maintainer:         ankurs4@cisco.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    CHANGELOG.md
    README.md

common common-exe-options
    ghc-options:-threaded
                -O2
                -Wall
                -Werror
                -Wno-missed-extra-shared-lib
                -Wno-missing-exported-signatures 
                -Wno-missing-import-lists
                -Wno-missed-specialisations
                -Wno-all-missed-specialisations
                -Wno-unsafe
                -Wno-safe
                -Wno-missing-local-signatures
                -Wno-monomorphism-restriction
                -Wno-missing-safe-haskell-mode
                -Wno-prepositive-qualified-module

common common-deriving-options
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-extensions:  DeriveAnyClass
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveLift
                       DeriveTraversable
                       DerivingStrategies
                       DerivingVia
                       GeneralizedNewtypeDeriving
common common-rio-options
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror -Wno-missed-extra-shared-lib
  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DoAndIfThenElse
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

library
    import: common-deriving-options, common-rio-options
    exposed-modules:  JsonParser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable json-parser-haskell
    import: common-deriving-options, common-rio-options, common-exe-options
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        json-parser-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite json-parser-haskell-test
    import: common-deriving-options, common-rio-options, common-exe-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , tasty
                    , tasty-hunit
                    , json-parser-haskell
